--- a/css/styles.css
+++ b/css/styles.css
@@ -63,22 +63,33 @@ body {
 /*Site navigation*/
 .site-nav a{
     color: #212121;
-        width: 45px;
-        height: 16px;
-        left: 453px;
-        top: 32px;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 1.3;
-        letter-spacing: 0.02em;
-        text-decoration: none;
+    font-size: 14px;
+    line-height: 1.3;
+    letter-spacing: 0.02em;
+    text-decoration: none;
 }
 .site-nav a:hover,
 .site-nav a:focus {
     color: var(--accent-color);
 }
 
+.site-nav.list a:hover,:focus {
+    color: var(--accent-color);
+}
+
 /*Site navigation footer*/
+
+
+.nav-footer {
+    color: var(--title-header);
+    font-size: 14px;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+    text-decoration: none;
+    font-style: normal;
+}
+
+
 .nav-footer a {
     color: var(--title-header);
         width: 231px;
@@ -97,18 +108,23 @@ body {
     color:var(--accent-color);
 }
 
+.nav-footer.list a.contacts{
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+   
+}
+
+.nav-footer.list a:hover,
+.nav-footer.list a:focus {
+    color: var(--accent-color);
+}
+
 .section-title {
     color: #212121;
-        width: 366px;
-        height: 42px;
-        left: 617px;
-        top: 966px;
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 1.1;
-        text-align: center;
-        letter-spacing: 0.03em;
-        text-decoration: none;
+    line-height: 1.1;
+    letter-spacing: 0.03em;
+    text-decoration: none;
 }
 
 .button {
@@ -126,6 +142,12 @@ body {
 .button.primary {
     color: var(--title-header);
     background-color: var(--accent-color);
+    width: 216px;
+    height: 50px;
+    left: 692px;
+    top: 430px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
 }
 
 .button.primary:hover,
@@ -135,12 +157,12 @@ body {
 }
 
 .button.nav.portfolio {
-    color: var(--title-text-color); 
+    color: #212121;
     background-color: #F5F4FA;
-    width: 125px;
-    height: 38px;
-    left: 593px;
-    top: 174px;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.03em;
     border-radius: 4px;
 }
 
@@ -150,15 +172,11 @@ body {
     background-color: var(--accent-color);
 }
 
-.site.nav .link.current {
+.site-nav .link.current {
     color: var(--accent-color);
 }
 
 .site-nav.list .benefits {
-    width: 270px;
-    height: 72px;
-    left: 215px;
-    top: 800px;
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
@@ -166,26 +184,31 @@ body {
 }
     
 .site-nav.list .pos{
-    width: 130px;
-    height: 19px;
-    left: 285px;
-    top: 1951px;
     font-size: 16px;
     line-height: 1.18;
-    text-align: center;
     letter-spacing: 0.03em;
     text-decoration: none;
 }
 
 .site-nav.list .type {
-    width: 322px;
-    height: 30px;
-    left: 639px;
-    top: 1050px;
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
-    text-decoration: none;
+    color: #757575;
+}
+
+h1.the {
+    width: 696px;
+    height: 120px;
+    left: 452px;
+    top: 280px;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.3;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: #ffffff;
 }
 
 
