--- a/css/styles.css
+++ b/css/styles.css
@@ -19,15 +19,10 @@ body {
 .logo {
     color: var(--accent-color);
     font-family: Raleway;
-    width: 145px;
-        height: 31px;
-        left: 215px;
-        top: 24px;
-        font-weight: 700;
-        font-size: 26px;
-        line-height: 1.1;
-        letter-spacing: 0.03em;
-        text-decoration: none;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.1;
+    letter-spacing: 0.03em;
 }
 
 .logo-header {
@@ -61,15 +56,15 @@ body {
     list-style: none;
 }
 /*Site navigation*/
-.site-nav a{
+.site-nav .link{
     color: #212121;
+    font-weight: 500;
     font-size: 14px;
     line-height: 1.3;
     letter-spacing: 0.02em;
-    text-decoration: none;
 }
-.site-nav a:hover,
-.site-nav a:focus {
+.site-nav .link:hover,
+.site-nav .link:focus {
     color: var(--accent-color);
 }
 
@@ -85,22 +80,15 @@ body {
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
-    text-decoration: none;
     font-style: normal;
 }
 
 
 .nav-footer a {
     color: var(--title-header);
-        width: 231px;
-        height: 21px;
-        left: 215px;
-        top: 1739px;
         font-size: 14px;
         line-height: 1.7;
         letter-spacing: 0.03em;
-        text-decoration: none;
-        font-style: normal;
 }
 
 .nav-footer a:hover, 
@@ -109,8 +97,6 @@ body {
 }
 
 .nav-footer.list a.contacts{
-    line-height: 1.71;
-    letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
    
 }
@@ -122,46 +108,44 @@ body {
 
 .section-title {
     color: #212121;
-    line-height: 1.1;
+    line-height: 1.14;
     letter-spacing: 0.03em;
-    text-decoration: none;
+    font-size: 14px;
+    text-transform: uppercase;
 }
 
 .button {
     color: var(--button-background);
     background-color: var();
     font-family: inherit;
-    width: 216px;
-    height: 50px;
-    left: 692px;
-    top: 430px;
-    text-decoration: none;
     cursor: pointer;
 }
 
 .button.primary {
     color: var(--title-header);
     background-color: var(--accent-color);
-    width: 216px;
-    height: 50px;
-    left: 692px;
-    top: 430px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
 }
 
 .button.primary:hover,
 .button.primary:focus {
-    color: var(--title-text-color);
     background-color: #188CE8;
 }
 
 .button.nav.portfolio {
     color: #212121;
     background-color: #F5F4FA;
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.62;
-    text-align: center;
     letter-spacing: 0.03em;
     border-radius: 4px;
 }
@@ -180,14 +164,15 @@ body {
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
-    text-decoration: none;
 }
     
-.site-nav.list .pos{
-    font-size: 16px;
-    line-height: 1.18;
-    letter-spacing: 0.03em;
-    text-decoration: none;
+.site-nav.list .position{
+font-weight: 400;
+font-size: 16px;
+line-height: 1.16;
+text-align: center;
+letter-spacing: 0.03em;
+color: #757575;
 }
 
 .site-nav.list .type {
@@ -197,20 +182,57 @@ body {
     color: #757575;
 }
 
-h1.the {
-    width: 696px;
-    height: 120px;
-    left: 452px;
-    top: 280px;
+h1.main-header {
     font-weight: 900;
     font-size: 44px;
     line-height: 1.3;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    color: #ffffff;
+    color: var(--title-header);
 }
 
+.header-contacts {
+    color: #717171;
+    line-height: 1.3;
+    letter-spacing: 0.02em;
+}
+
+.header-contacts.list .link:hover,
+.header-contacts.list .link:focus {
+        color: var(--accent-color);
+    }
+.hero {
+    background-color: #2F303A;
+}
+
+.title {
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+}
+
+.team {
+font-size: 36px;
+line-height: 1.16;
+text-align: center;
+letter-spacing: 0.03em;
+color: #212121;
+}
+      
+.team-name {
+    font-size: 16px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+}      
+
+.address {
+    font-style: normal;
+}
 
 /* основной цвет/ - #212121;
 
