--- a/css/styles.css
+++ b/css/styles.css
@@ -192,7 +192,7 @@ h1.main-header {
     color: var(--title-header);
 }
 
-.header-contacts {
+.header-contacts.list a {
     color: #717171;
     line-height: 1.3;
     letter-spacing: 0.02em;
