--- a/css/styles.css
+++ b/css/styles.css
@@ -57,9 +57,6 @@ body {
     list-style: none;
 }
 
-.portfolio-item {
-    list-style: none;
-}
 /*Site navigation*/
 .site-nav .link{
     color: #212121;
@@ -93,6 +90,7 @@ body {
         font-size: 14px;
         line-height: 1.7;
         letter-spacing: 0.03em;
+        text-decoration: none;
 }
 
 .nav-footer a:hover, 
@@ -208,6 +206,8 @@ h1.main-header {
     color: #717171;
     line-height: 1.3;
     letter-spacing: 0.02em;
+    font-weight: 500;
+    font-size: 14px;
 }
 
 .header-contacts.list .link:hover,
@@ -272,6 +272,10 @@ color: #212121;
 
 .page-header {
     background-color: #ffffff;
+}
+
+.address {
+    font-style: normal;
 }
 /* основной цвет/ - #212121;
 
